[gd_scene load_steps=12 format=3 uid="uid://c067t084llobg"]

[ext_resource type="Script" uid="uid://b7uekdptb2e1l" path="res://scenes/ui/ui.gd" id="1_u7n8c"]
[ext_resource type="LabelSettings" uid="uid://bc62k2hfbl4up" path="res://resources/themes/label.tres" id="2_7vp6q"]
[ext_resource type="Texture2D" uid="uid://dtawo1ao2a3m3" path="res://assets/sprites/ui/progress_bar_progress.png" id="3_g5kmx"]
[ext_resource type="Texture2D" uid="uid://dn5m1xb14thls" path="res://assets/sprites/ui/progress_bar_under.png" id="4_0dwhk"]
[ext_resource type="Texture2D" uid="uid://dergdpkbogy2a" path="res://assets/sprites/ui/mouse_idle.png" id="5_0dwhk"]
[ext_resource type="Texture2D" uid="uid://brwpswjl4t7vo" path="res://assets/sprites/ui/mouse_left.png" id="6_pfayw"]
[ext_resource type="Texture2D" uid="uid://bd7njsy35jc1m" path="res://assets/sprites/ui/mouse_right.png" id="7_7vp6q"]

[sub_resource type="Animation" id="Animation_jcn1r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRectMouse:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_0dwhk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRectMouse:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7vp6q"]
resource_name = "prompt_left_click"
length = 1.2666
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRectMouse:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_0dwhk"), ExtResource("6_pfayw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRectMouse:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uegxj"]
resource_name = "prompt_right_click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRectMouse:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_0dwhk"), ExtResource("7_7vp6q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRectMouse:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uegxj"]
_data = {
&"RESET": SubResource("Animation_jcn1r"),
&"prompt_left_click": SubResource("Animation_7vp6q"),
&"prompt_right_click": SubResource("Animation_uegxj")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7n8c")

[node name="LabelLevelClick" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = -4.0
offset_right = 33.0
offset_bottom = 9.0
text = "Click"
label_settings = ExtResource("2_7vp6q")

[node name="LabelResult" type="Label" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 0
offset_top = 3.0
offset_right = 64.0
offset_bottom = 16.0
text = "Success"
label_settings = ExtResource("2_7vp6q")
horizontal_alignment = 1

[node name="TextureProgressBarSand" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 31.0
offset_top = 1.0
offset_right = 63.0
offset_bottom = 7.0
value = 100.0
texture_under = ExtResource("4_0dwhk")
texture_progress = ExtResource("3_g5kmx")

[node name="TextureRectMouse" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 19.0
offset_right = 28.0
offset_bottom = 9.0
texture = ExtResource("5_0dwhk")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_uegxj")
}
